Modified the sign up page so icon wouldn't get smaller.

--- a/src/pages/SignUp/signup.css
+++ b/src/pages/SignUp/signup.css
@@ -1,6 +1,6 @@
 .link-social-register {
     border: 1px solid black !important;
-    width: 50%;
+    /* width: 50%; */
     margin: 0.5rem auto;
     padding: 0.5rem 1rem;
     border-radius: 15px !important;
