--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,59 +1,72 @@
-*{
+.hero {
+  padding: 0 150px;
+  padding-bottom: 66px;
+}
+
+.intro {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-side {
+  /* width: 50%; */
+  padding-top: 80px;
+}
+
+.left-side h1 {
+  margin-bottom: 69px;
+  font-weight: 700;
+  margin-left: 0;
+}
+.pets-font-color {
+  color: #206ef6;
+}
+
+.left-side p {
+  font-weight: 500;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-section {
-  background-color: rgb(148, 148, 148);
-}
-.top {
-  width: 100%;
-  height: 500px;
-  margin: 60px 0;
-  padding: 50px;
-  display: flex;
+  margin-bottom: 98px;
 }
 
-.left-side { 
-  width: 50%;
-  
+.img {
+  width: 450px;
+  height: 480px;
+  /* object-fit: cover; */
+}
 
+.btn-shop {
+  padding: 1rem 3rem !important;
+  border-radius: 15px !important;
+  font-weight: 600 !important;
+  font-size: 24px;
 }
-.left-side h1 { 
-  margin-bottom: 40px;
-  font-size: 50px;
+
+.main-product {
+  padding: 130px 150px 75px;
 }
-.image{
-  width: 50%;
-  background-image: url(./artem-stoliar-MXoOGmCiPZY-unsplash.jpg);
-  background-position: center;
-  background-size: cover;
+
+.main-product-desc {
+  margin-bottom: 110px;
 }
-.toptwo{
-  width: 100%;
-}
-.toptwo h1{
-  width: 20%;
-  margin: 50px 40% 50px 40%;
-  text-align: center;
-  
-}
-.productdescription { 
-  width: 100%;
-  height: 400px;
+
+.product-description {
   display: flex;
-  padding: 50px;
+  justify-content: space-between;
+  align-items: center;
 }
-.productdescription .iimage { 
-  width: 50%;
+
+.product-description .product-image {
+  width: 45%;
+}
+
+.product-image img {
+  width: 100%;
   height: 100%;
-  background-image: url(./artem-stoliar-MXoOGmCiPZY-unsplash.jpg);
-  background-position: center;
-  background-size: cover;
+  /* object-fit: cover; */
+  /* margin-right: 0; */
 }
-.productdescription p { 
-  width: 25%;
-  font-size: 22px;
-  margin: 10% 17% ;
-  text-align: center;
+
+.product-description p {
+  text-align: start;
+  width: 30%;
 }
