--- a/src/pages/FindMyPet/find.css
+++ b/src/pages/FindMyPet/find.css
@@ -1,28 +1,28 @@
 .Findmybet {
-  width: 100%;
+  /* height: 100; */
+  padding: 100px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-.text-center {
-  margin-top: 150px;
-  margin-bottom: 70px;
+.title {
+  font-weight: 700;
+  font-size: 60px;
+  margin-bottom: 85px;
+}
+.id-input {
+  /* display: block; */
+  width: 55%;
+  margin-bottom: 75px;
+  border-radius: 20px;
+  padding: 12px 22px;
   font-size: 40px;
 }
-.TEExt {
-  display: block;
-  width: 30%;
-  margin: 20px 35%;
-  border-radius: 15px;
-  height: 50px;
-  margin-bottom: 40px;
-  padding: 20px;
-  font-size: 30px;
-}
 
-.buttonn {
-  height: 60px;
-  width: 30%;
-  margin: 20px 35%;
-  border-radius: 10px;
-  font-size: 24px;
-  background-color: gray;
-  color: white;
+.track-btn {
+    padding: 20px 180px !important;
+    border-radius: 20px !important;
+    font-size: 35px !important;
+    font-weight: 700 !important;
 }
