--- a/src/components/Navbar/NavbarStyle.css
+++ b/src/components/Navbar/NavbarStyle.css
@@ -10,6 +10,25 @@
   align-items: center;
   margin-right: 10px;
 }
+.search-container .input { 
+  width: 448px;
+  height: 36px;
+  border-radius: 15px 0px 0px 15px;
+  border: none;
+  background-color: #E7E7E7;
+  font-weight: 600;
+  line-height: 150%;
+  font-size: 15px;
+  padding: 15px;
+}
+.search-container button{
+  width: 105px;
+  height: 36px;
+  border-radius: 0px 15px 15px 0px;
+  background-color: #206EF6;
+  color: white;
+  border: none;
+}
 
 .input {
   border: 0;
