--- a/src/pages/Feedback/feedback.css
+++ b/src/pages/Feedback/feedback.css
@@ -1,38 +1,41 @@
-.Findmybet { 
+.feedback {
+    /* height: 100; */
+    padding: 100px 22.5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /* width: 50%; */
+    margin: auto;
+  }
+  .feedback-title {
+    font-weight: bold;
+    font-size: 60px;
+    margin-bottom: 0px;
+
+  }
+
+  .pragraph {
+    /* text-align: center; */
+    margin: 40px auto ;
+    width: 50%;
+    font-weight: 500;
+    font-size: 18px;
+    color: rgba(109, 114, 128, 1);
+  }
+  .feedback-input {
+    /* display: block; */
     width: 100%;
-  
-  }
-  .text-center { 
-    margin-top: 150px;
-    margin-bottom: 70px;
-    font-size: 50px;
-  
-    
-  }
-  .TEExt{ 
-    display: block;
-    width: 25%;
-    margin: 25px  37.5%;
-    border-radius: 15px;
-    height: 55px;
-    margin-bottom: 40px;
-    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    padding: 0px 22px;
     font-size: 30px;
   }
   
-  .buttonn{
-    height: 50px;
-    width: 10%;
-    margin: 20px  45%;
-    border-radius: 17px;
-    font-size: 28px;
-    background-color: gray;
-    color: white;
+  .send-btn {
+      padding: 10px 100px !important;
+      border-radius: 20px !important;
+      font-size: 35px !important;
+      font-weight: 700 !important;
   }
-  .pragraph {
-    width: 20%;
-  margin: 20px  40%;
-  margin-bottom: 40px;
-  text-align: center;
   
-  }
