--- a/src/pages/ForgetPassword/forget.css
+++ b/src/pages/ForgetPassword/forget.css
@@ -1,7 +1,8 @@
-.form {
+.forget-form {
     width: 31% !important;
+    /* margin: 0 a !important; */
 }
 
-.contain {
+.contain-forget {
     padding-bottom: 210px !important;
 }
