--- a/src/pages/VerficationCode/verify.css
+++ b/src/pages/VerficationCode/verify.css
@@ -13,15 +13,11 @@
 }
 
 .verify-title {
-  font-size: 2.4rem;
+  font-size: 2.4rem !important;
+  margin-bottom: 15px !important;
 }
 
-.form {
-  width: 35% !important;
+.verify-form {
+  width: 39% !important;
   margin-top: 0 !important;
-}
-
-.btn-send {
-  font-weight: bold;
-  font-size: 1.5rem;
 }
