--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ a {
   background: linear-gradient(
     45deg,
     rgba(32, 110, 246, 0.2) 0%,
-    rgb(255, 255, 255) 20% 80%,
+    rgb(255, 255, 255) 30% 65%,
     rgba(255, 209, 1, 0.2)
   );
 }
@@ -61,12 +61,18 @@ a {
 }
 
 .contain {
-  padding: 100px 0;
+  padding: 7.3% 0;
 }
 
 .label {
   font-size: 18px !important;
   font-weight: 500 !important;
+  margin-bottom: 8px !important;
+}
+
+.label-bold {
+  font-size: 18px !important;
+  font-weight: 700 !important;
   margin-bottom: 8px !important;
 }
 
