--- a/src/components/Footer/FooterComponent.css
+++ b/src/components/Footer/FooterComponent.css
@@ -11,11 +11,11 @@
     width: 100%;
     height: 269px;
     background-color: #1E1E1E;
+    color: #FEFEFE;
 }
 
 .center-side {
     text-align: center;
-    color: #FEFEFE;
 }
 
 .center-side .first-line {
@@ -33,15 +33,20 @@
     line-height: 15.6px;
     margin-top: 38px;
 }
+.links{
+    display: flex;
+    flex-direction: column;
+}
+.links link {
+    text-decoration: none;
+    margin-top: 10px;
+    color: #FEFEFE;
+}
+
 
 .right-side {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 5vw;
-}
-
-.right-side .fa-brands,
-.fab {
-    color: #FEFEFE;
 }
