--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,14 +1,16 @@
 .card {
-  background-color: #E7E7E7 !important;
-  display: flex;
+  background-color: rgba(248, 248, 248, 1) !important;
+  display: inline-block;
   /* border: 2px solid #000000; */
-  width: 320px;
-  padding: 17px;
+  width: 32rem;
+  /* width: fit-content; */
+  padding: 1.5rem 1.7rem 1.7rem 1.5rem;
+  margin: 3rem;
 }
 img {
   width: 100%;
-  height: 210px;
-  border-radius: 10px;
+  height: 23rem;
+  border-radius: 1.2rem;
   object-fit: cover;
 }
 
@@ -21,18 +23,24 @@ img {
 
 .product-name, .product-price {
   font-weight: 700;
+}
+.product-name {
+  font-size: 2.4rem;
+}
+.product-price {
   font-size: 1.5rem;
 }
 
 .product-stars {
   color: #FFD101;
+  font-size: 1.5rem;
 }
 
 .product-desc {
   font-weight: 400;
-  font-size: 0.75rem;
+  font-size: 1.4rem;
   margin-top: 0;
-  margin-bottom: 21px;
+  margin-bottom: 2.1rem;
 }
 
 
@@ -41,4 +49,13 @@ img {
   justify-content: space-between;
   align-items: center;
   /* margin-bottom: 17px; */
+}
+
+.btn-add-to-card {
+  font-weight: 600 !important;
+  font-size: 1.4rem !important;
+  line-height: 28px !important;
+  padding: 0.4rem 5.4rem !important;
+  border-radius: 1rem !important;
+  border: rgba(60, 29, 169, 1) 2px solid !important;
 }
