--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,21 +1,30 @@
 .navigation {
-    background-color: black;
+  background-color: black;
 }
 .tabs {
-    width: 35%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 0;
-    font-weight: 600;
-    font-size: 1.5rem;
+  width: 35%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navigation-link {
-    color: rgba(255, 255, 255, 0.7) !important;
-    transition: all 0.3s linear;
+  display: inline-block;
+  color: rgba(255, 255, 255, 0.7) !important;
+  transition: all 0.3s linear;
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 2.7rem;
+  padding: 3rem 0 1.3rem 0;
 }
 
 .navigation-link:hover {
-    color: white !important;
+  color: white !important;
+}
+
+.tabs a.active {
+  font-weight: 700 !important;
+  color: white !important;
+  /* background-color: green; */
+    border-bottom: 0.7rem solid white;
 }
