--- a/src/components/Footer/FooterComponent.css
+++ b/src/components/Footer/FooterComponent.css
@@ -1,21 +1,14 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-.footer-contener {
+.footer-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
-    height: 269px;
+    padding: 7.5rem 0;
     background-color: #1E1E1E;
+    color: #FEFEFE;
 }
 
 .center-side {
     text-align: center;
-    color: #FEFEFE;
 }
 
 .center-side .first-line {
@@ -33,15 +26,30 @@
     line-height: 15.6px;
     margin-top: 38px;
 }
+.footer-pages-links{
+    display: flex;
+    flex-direction: column;
+}
+.footer-pages-links a {
+    color: rgba(146, 146, 146, 1) !important;
+    font-weight: 700;
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
+    transition: all 0.3s linear;
+}
+.footer-pages-links a:hover {
+    color: white !important;
+}
 
 .right-side {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 5vw;
+    width: 6%;
 }
 
-.right-side .fa-brands,
-.fab {
-    color: #FEFEFE;
+
+.footer-icons {
+    font-size: 2rem !important;
+    color: white !important;
 }
