--- a/src/index.css
+++ b/src/index.css
@@ -59,12 +59,12 @@ a {
 
 .title {
   font-weight: 700;
-  font-size: 2.75rem;
-  margin-bottom: 50px;
+  font-size: 4.4rem;
+  margin-bottom: 5rem;
 }
 
 .large-title {
-  font-size: 3.8rem !important;
+  font-size: 6rem !important;
 }
 
 .contain {
@@ -72,8 +72,8 @@ a {
 }
 
 .label {
-  font-size: 18px !important;
-  font-weight: 500 !important;
+  font-size: 2rem !important;
+  font-weight: 400 !important;
   margin-bottom: 8px !important;
 }
 
@@ -85,8 +85,20 @@ a {
 
 .submit-btn {
   /* padding: 20px 180px !important; */
-  border-radius: 10px !important;
-  font-size: 24px !important;
+  border-radius: 1rem !important;
+  font-size: 2.8rem !important;
   font-weight: 700 !important;
 }
 
+.customized-input {
+  font-size: 2rem !important;
+  padding-top: 1.1rem !important;
+  padding-bottom: 1.1rem !important;
+}
+
+.pages-btn {
+  border-radius: 2rem !important;
+  border: 3px solid #3c1da9;
+  padding: 2rem 10rem !important;
+  color: #ffffff;
+}
