--- a/src/pages/Feedback/feedback.css
+++ b/src/pages/Feedback/feedback.css
@@ -1,41 +1,38 @@
 .feedback {
-    /* height: 100; */
-    padding: 100px 22.5%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    /* width: 50%; */
-    margin: auto;
-  }
-  .feedback-title {
-    font-weight: bold;
-    font-size: 60px;
-    margin-bottom: 0px;
+  /* height: 100; */
+  padding: 100px 22.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  /* width: 50%; */
+  margin: auto;
+}
+.feedback-title {
+  margin-bottom: 7.5rem !important;
+}
 
-  }
+.pragraph {
+  /* text-align: center; */
+  margin: 0 auto;
+  margin-bottom: 7.5rem;
+  width: 50%;
+  font-weight: 500;
+  font-size: 18px;
+  color: rgba(109, 114, 128, 1);
+}
+.feedback-input {
+  /* display: block; */
+  width: 100%;
+  margin-bottom: 30px;
+  border-radius: 2rem;
+  padding: 0px 22px;
+  font-size: 30px;
+}
 
-  .pragraph {
-    /* text-align: center; */
-    margin: 40px auto ;
-    width: 50%;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgba(109, 114, 128, 1);
-  }
-  .feedback-input {
-    /* display: block; */
-    width: 100%;
-    margin-bottom: 30px;
-    border-radius: 20px;
-    padding: 0px 22px;
-    font-size: 30px;
-  }
-  
-  .send-btn {
-      padding: 10px 100px !important;
-      border-radius: 20px !important;
-      font-size: 35px !important;
-      font-weight: 700 !important;
-  }
-  
+.send-btn {
+  padding: 10px 100px !important;
+  border-radius: 20px !important;
+  font-size: 35px !important;
+  font-weight: 700 !important;
+}
