--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -72,3 +72,56 @@
   text-align: start;
   width: 30%;
 }
+
+/* Products */
+.categories {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.category-btn {
+  transition: all 0.3s linear !important;
+}
+
+.category-btn:hover {
+  background-color: white !important;
+  color: rgba(32, 110, 246, 1) !important;
+}
+
+.products-carousel {
+  /* padding: 0 7.5rem; */
+  margin-bottom: 20rem !important;
+}
+
+.products-carousel-two {
+  margin-bottom: 7.5rem !important;
+  /* padding: 0 7.5rem; */
+}
+
+.privilages {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 7.5rem;
+}
+
+.privilage {
+  width: 20%;
+  margin-bottom: 12.5rem;
+}
+
+.privilages-heading {
+  color: rgba(32, 110, 246, 1);
+  font-weight: 400;
+  font-size: 2.2rem;
+  margin-bottom: 0.6rem;
+}
+
+.privilages-text {
+  padding: 1rem 0;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.9rem;
+  color: rgba(109, 114, 128, 1);
+}
