--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -1,57 +1,92 @@
 .profile {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  padding: 3rem 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* margin: 0 auto; */
 }
 
-@media screen and (max-width: 800px) {
+.name {
+  margin-top: 11rem;
+  margin-left: 14.5rem;
+  margin-bottom: 5rem;
+  font-size: 5rem;
+  font-weight: 700;
+  /* margin-right: auto; */
+  align-self: flex-start;
 }
-
 /* first section */
 .profile-img {
-  width: 520px;
+  width: 38%;
   height: 360px;
   object-fit: cover;
   overflow: hidden;
-  margin-top: 3rem;
+  margin-bottom: 5rem;
+  border-radius: 2rem;
+  /* margin-top: 3rem; */
   /* background-size: cover; */
 }
 
+.profile-section {
+  width: 38%;
+}
+
 /* second section */
-.info {
+/* .info {
   margin: 100px auto;
   width: 75%;
-}
+} */
 
 .setting {
   display: flex;
   justify-content: space-between;
-  background-color: gray;
-  padding: 1rem;
+  align-items: center;
+  background-color: rgba(32, 110, 246, 1);
+  padding: 1rem 2rem;
 }
 
+.setting-label {
+  font-size: 3.2rem;
+  font-weight: 700;
+  color: white;
+}
 .profile-section .list-group {
   border-radius: 0;
   text-align: center;
 }
 
 .icon {
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: all 0.3s linear;
+  color: white;
 }
 
-.chevron-down {
+/* .chevron-down {
   transform: rotate(180deg);
-}
+} */
 
-.setting-list {
-  display: none;
-  opacity: 0;
+#profile-list-group {
+  /* display: none !important; */
+  /* opacity: 0; */
   transition: all 0.3s linear;
+  margin-bottom: 15rem !important;
 }
 
-.show-setting-list {
-  /* animation: show-list 0.5s forwards; */
-  display: block;
-  opacity: 1;
+.setting-list .list-group-item {
+  margin-bottom: 0.3rem;
+  opacity: 67% !important;
 }
+.setting-list .list-group-item .btn {
+  font-weight: 700 !important;
+  font-size: 1.5rem;
+  color: gray !important;
+  transition: all 0.5s linear;
+}
+
+.setting-list .list-group-item .btn:hover {
+  color: black !important;
+}
+/* .show-setting-list  {
+  animation: show-list 0.5s forwards;
+  display: block !important;
+} */
