--- a/src/pages/VerficationCode/verify.css
+++ b/src/pages/VerficationCode/verify.css
@@ -1,7 +1,8 @@
 .input-field {
-  border: 1px solid gainsboro;
-  border-radius: 5px;
-  padding: 0.5rem 1rem;
+  border: 1px solid black !important;
+  border-radius: 1rem;
+  /* padding: 0.5rem 1rem; */
+  padding: 1rem  !important;
   outline: 0;
   transition: all 0.3s linear;
   letter-spacing: 4px;
@@ -13,7 +14,9 @@
 }
 
 .verify-title {
-  font-size: 2.4rem !important;
+  font-size: 3.5rem !important;
+  font-weight: 700 !important;
+
   margin-bottom: 15px !important;
 }
 
