--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,6 @@
 .hero {
   padding: 0 150px;
   padding-bottom: 66px;
-}
-
-.intro {
   display: flex;
   justify-content: space-between;
 }
@@ -14,41 +11,49 @@
 }
 
 .left-side h1 {
-  margin-bottom: 69px;
-  font-weight: 700;
+  margin-bottom: 70px;
   margin-left: 0;
+  font-weight: 700;
+  font-size: 6rem;
+  line-height: 42px;
+  text-align: left;
 }
+
+.hero-intro {
+  margin-bottom: 18px;
+}
+
 .pets-font-color {
   color: #206ef6;
 }
 
 .left-side p {
-  font-weight: 500;
-  margin: 0;
-  margin-bottom: 98px;
+  font-weight: 400;
+  font-size: 2.2rem;
+  line-height: 3.3rem;
+  margin-bottom: 100px;
 }
 
 .img {
-  width: 450px;
+  width: 25%;
   height: 480px;
+
   object-fit: contain;
 }
 
 .btn-shop {
-  padding: 1rem 3rem !important;
-  border-radius: 15px !important;
-  font-weight: 600 !important;
-  font-size: 1.5rem;
+  padding: 24px 56px !important;
+  color: white !important;
 }
 
 .main-product {
-  padding: 130px 150px 75px;
+  padding: 0 150px;
+  padding-top: 130px;
+  padding-bottom: 75px;
 }
 
 .main-product-desc {
-  margin-bottom: 110px;
-  font-weight: 700;
-  font-size: 2.5rem;
+  margin-bottom: 110px !important;
 }
 
 .product-description {
@@ -57,20 +62,44 @@
   align-items: center;
 }
 
+.product-description-box {
+  width: 40%;
+}
+
+.product-description-image {
+  width: 27rem;
+  height: 21rem;
+  object-fit: cover;
+  margin: 80px;
+}
+
+.product-description-text {
+  font-size: 2.4rem;
+  font-weight: 400;
+  line-height: 2.4rem ;
+  text-align: left;
+  color: rgba(109, 114, 128, 1);
+}
+
 .product-description .product-image {
-  width: 45%;
+  width: 39%;
 }
 
 .product-image img {
   width: 100%;
   height: 100%;
-  /* object-fit: cover; */
+  object-fit: cover;
   /* margin-right: 0; */
 }
 
 .product-description p {
-  text-align: start;
-  width: 30%;
+  /* width: 30%; */
+  /* font-family: Futura Round; */
+  font-size: 2.4rem;
+  font-weight: 400;
+  line-height: 2.4rem;
+  letter-spacing: 0px;
+  text-align: left;
 }
 
 /* Products */
