--- a/src/pages/FindMyPet/find.css
+++ b/src/pages/FindMyPet/find.css
@@ -11,16 +11,15 @@
   /* display: block; */
   outline: none;
   width: 55%;
-  margin-bottom: 7.5rem;
-  border-radius: 2rem;
-  padding: 1.2rem 2.2rem;
+  margin-bottom: 75px;
+  border-radius: 20px;
+  padding: 12px 22px;
   font-size: 4rem;
 }
 
 .track-btn {
   border-radius: 2rem !important;
   border: 3px solid #3c1da9;
-  padding: 2rem 10rem !important;
+  padding: 20px 100px !important;
   color: #ffffff;
 }
-
