--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -3,12 +3,12 @@
 }
 
 .log-in-title {
-  margin-top: 4.6rem !important;
-  margin-bottom: 11rem !important;
+  margin-top: 46px !important;
+  margin-bottom: 110px !important;
 }
 
 .welcome-label {
-  margin-bottom: 8rem !important;
+  margin-bottom: 80px !important;
   font-size: 2rem !important;
   font-weight: 400 !important;
 }
