--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,16 +2,16 @@
   background-color: rgba(248, 248, 248, 1) !important;
   display: inline-block;
   /* border: 2px solid #000000; */
-  width: 32rem;
+  width: 320px;
   /* width: fit-content; */
-  padding: 1.5rem 1.7rem 1.7rem 1.5rem;
-  margin: 0 3rem;
-  margin-top: 3rem;
+  padding: 15px 17px 17px 15px;
+  margin: 0 30px;
+  margin-top: 30px;
 }
 img {
   width: 100%;
-  height: 23rem;
-  border-radius: 1.2rem;
+  height: 230px;
+  border-radius: 12px;
   object-fit: cover;
 }
 
@@ -41,7 +41,7 @@ img {
   font-weight: 400;
   font-size: 1.4rem;
   margin-top: 0;
-  margin-bottom: 2.1rem;
+  margin-bottom: 21px;
 }
 
 
@@ -56,7 +56,7 @@ img {
   font-weight: 600 !important;
   font-size: 1.4rem !important;
   line-height: 28px !important;
-  padding: 0.4rem 5.4rem !important;
-  border-radius: 1rem !important;
+  padding: 4px 54px !important;
+  border-radius: 10px !important;
   border: rgba(60, 29, 169, 1) 2px solid !important;
 }
