--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -5,7 +5,7 @@
 .items-container {
   overflow: hidden;
   /* width: 90%; */
-  padding: 3.5rem;
+  padding: 35px;
   margin: auto;
 }
 .items-list {
@@ -27,8 +27,8 @@
 }
 
 .chevron-product-icon {
-  width: 10rem;
-  height: 10rem;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   padding: 10px;
   margin: 10px 0;
