--- a/src/components/Footer/FooterComponent.css
+++ b/src/components/Footer/FooterComponent.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 7.5rem 0;
+    padding: 75px 0;
     background-color: #1E1E1E;
     color: #FEFEFE;
 }
@@ -34,22 +34,23 @@
     color: rgba(146, 146, 146, 1) !important;
     font-weight: 700;
     font-size: 2.2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
     transition: all 0.3s linear;
 }
 .footer-pages-links a:hover {
     color: white !important;
 }
 
-.right-side {
+.footer-icons{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 6%;
+    width: 30%;
+    margin: auto;
 }
 
 
-.footer-icons {
+.footer-icon {
     font-size: 2rem !important;
     color: white !important;
 }
