--- a/src/components/ProductComponent/productComponent.css
+++ b/src/components/ProductComponent/productComponent.css
@@ -1,111 +1,122 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+.product-container-page {
+  width: 100%;
+  padding-left: 95px;
+  padding-bottom: 210px;
+  /* background-color: gray !important; */
+}
+.back-to-list {
+  padding: 50px 0 !important;
+  display: flex;
+  align-items: center;
 }
 
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100vw;
-    height: 640px;
-    padding: 4vw;
+.back-to-list-link,
+.back-to-list-icon {
+  font-size: 2.8rem !important;
+  font-weight: 600;
+  line-height: 2.8rem;
+  color: rgba(32, 110, 246, 1) !important;
+  /* text-decoration: underline !important; */
+  border-bottom: 4px solid rgba(32, 110, 246, 1) !important;
+}
+.back-to-list-icon {
+  border-bottom: none !important;
+  margin-right: 5px;
 }
 
-.container .left {
-    width: 52.28vw;
-    height: 100%;
+.product-page {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  width: 86%;
+  margin: 0 auto;
+  box-shadow: 4px 6px 10px 1px rgba(128, 128, 128, 0.2);
+  border-radius: 2.8rem;
+  overflow: hidden;
 }
 
-.container .left img {
-    width: 100%;
-    height: 100%;
+.product-first-section {
+  width: 50%;
+  /* height: 100% !important; */
+  /* background-color: green; */
+  /* padding: 20rem; */
 }
 
-.container .right {
-    height: 100%;
-
+.product-page-image {
+  /* width: 100%;
+  height: 100%; */
+  object-fit: contain;
 }
 
-.container .right .right-content {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.product-second-section {
+  width: 50%;
+  padding: 72px 63px 153px 95px;
 }
 
-.container .right .right-content .first {
-    height: 262px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+.product-title {
+  font-weight: 600;
+  font-size: 3.2rem;
+  margin-bottom: 35px;
 }
 
-.container .right .right-content .first h1 {
-    font-size: 60px;
-    font-weight: 700;
-    line-height: 84px;
-    text-align: center;
+.product-category-and-stars {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 36px;
+}
+.product-category-and-stars span {
+  margin-right: 12px;
 }
 
-.container .right .right-content .first .star {
-    font-size: 36px;
-    font-weight: 600;
+.product-category {
+  font-weight: 400;
+  font-size: 1.8rem;
+  color: rgba(38, 207, 124, 1);
 }
 
-.container .right .right-content .first .sold {
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 44.8px;
-    text-align: center;
-    margin-top: 20px;
+.product-page-description {
+  font-weight: 400;
+  font-size: 1.8rem;
+  margin-bottom: 32px;
 }
 
-.container .right .right-content .first .price {
-    font-size: 32px;
-    font-weight: 700px;
-    line-height: 44.8px;
-    text-align: center;
-    margin-top: 20px;
+.add-product-to-card {
+  font-size: 1.8rem;
+  font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 43px;
 }
 
-.container .right .right-content .second {
-    font-size: 32px;
-    font-weight: 400;
+.product-page-cart span {
+  margin-right: 20px;
 }
 
-.container .right .right-content .description p {
-    width: 28.06vw;
-    font-size: 20px;
-    font-weight: 400;
-    color: #6D7280;
+.product-page-icon {
+  font-size: 2rem;
+  color: rgba(38, 207, 124, 1);
+  cursor: pointer;
 }
 
-.add {
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 4vw;
+.product-counts {
+  border-radius: 1rem;
+  border: 1px solid rgba(212, 212, 212, 1);
+  padding: 15px 20px;
 }
 
-.add select {
-    width: 12vw;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 60px;
-    color: #000000;
-    border-radius: 15px;
-    padding: 10px;
+.product-page-price {
+  font-size: 4rem;
+  font-weight: bold;
 }
 
-.add button {
-    width: 74.75vw;
-    font-size: 40px;
-    font-weight: 700;
-    font-family: Urbanist;
-    line-height: 28px;
-    color: #FFFFFF;
-    border-radius: 15px;
-    background-color: 626262;
+.btn-add-to-card-product-page {
+    background-color: rgba(38, 207, 124, 1) !important;
+    color: white !important;
+    border-radius: 1rem !important;
+    padding: 12.5px 153.5px !important;
+    border: 0 !important;
+
 }
