--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,7 +1,7 @@
 .about-text {
   background-color: white;
   width: 70%;
-  padding: 4rem 5rem;
+  padding: 40px 50px;
   font-size: 38px;
   font-weight: 400;
   line-height: 57px;
@@ -9,7 +9,7 @@
   text-align: left;
   color: rgba(104, 103, 103, 1);
   box-shadow: 4px 6px 10px 1px rgba(128, 128, 128, 0.2);
-  border-radius: 1rem;
+  border-radius: 10px;
 }
 
 .about-container {
