--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -6,9 +6,9 @@
   width: 72%;
   max-height: 600px;
   background-color: rgba(255, 255, 255, 0.85);
-  border-radius: 2rem;
+  border-radius: 20px;
   margin-left: 5%;
-  margin-bottom: 8rem;
+  margin-bottom: 80px;
 }
 
 .cart-items {
@@ -77,5 +77,5 @@
 
 .check-out-btn button:hover {
   background-color: rgb(18, 161, 92) !important;
-  margin-bottom: 15rem;
+  margin-bottom: 150px;
 }
