--- a/src/pages/CheckOut/checkout.css
+++ b/src/pages/CheckOut/checkout.css
@@ -1,85 +1,174 @@
-.left, .right {
-    padding: 1rem 2rem;
-    /* border: 1px  gray solid; */
-    border: 1px solid gray;
-    /* flex-grow: 1; */
-    width: 45%;
-
+.checkout-container {
+  padding: 78px 75px 170px 75px;
 }
 
+.checkout-header {
+  font-size: 2.4rem;
+  font-weight: 700;
+  /* line-height: ; */
+  margin-bottom: 61px;
+}
+
+.left,
 .right {
-    margin-left: 3rem;
-    padding: 3.2rem ;
-    
+  border-radius: 20px;
+}
+.left {
+  padding: 47px 75px 54px 75px;
+  width: 50%;
+}
+.right {
+  width: 44%;
+
+  padding: 75px 75px;
+  /* padding-top: 90px;
+  padding-bottom: 80px; */
 }
 
 .payment-img {
-    width: 60%;
-    /* margin: 0 auto; */
-    /* height: 100%; */
-    margin-bottom: 2rem
+  width: 60%;
+  /* margin: 0 auto; */
+  /* height: 100%; */
+  margin-bottom: 69px;
+  object-fit: cover;
 }
 
 .saved-card {
-    font-weight: bold;
-    color: gray;
-    font-size: 1.2rem;
+  font-weight: bold;
+  color: gray;
+  font-size: 2.4rem;
+}
+.payment-form-m {
+  margin-bottom: 25px;
 }
 .input-group {
-    display: flex;
-    justify-content: space-between;
-    align-items: center !important;
-    border: 1px solid gainsboro;
-    border-radius: 5px;
-    padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center !important;
+  border: 1px solid gainsboro;
+  border-radius: 10px;
+  padding: 0 10px;
 }
-
 
 .input-field {
-    border: 0 !important;
-    outline: 0 !important;
-    box-shadow: 0!important;
-    padding: 7px 0 !important;
-
+  border: 0 !important;
+  outline: 0 !important;
+  box-shadow: 0 !important;
+  padding: 7px 0 !important;
+  font-weight: 400 !important;
+  font-size: 2.2rem !important;
 }
 .input-field:focus {
-    box-shadow: none!important;
+  box-shadow: none !important;
 }
 
-.points::placeholder{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* height: 100%; */
-    /* padding-bottom: 10px; */
-    font-size: 5rem;
-    color: black!important;
+.points::placeholder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 100%; */
+  /* padding-bottom: 10px; */
+  font-size: 5rem;
+  color: black !important;
 }
 
+.payment-icon {
+  font-size: 2.2rem;
+}
+
+.last-line {
+  margin-bottom: 10px;
+}
+
+.day,
+.ccv {
+  width: 45% !important;
+}
+.green {
+  color: rgba(120, 182, 137, 1);
+}
 .data-rec {
-    border-bottom: 1px solid black;
-    font-size: 1.2rem;
-    font-weight: 500;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 3.5rem;
+  border-bottom: 1px solid black;
+  font-size: 2.4rem;
+  font-weight: 400;
+  padding-bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 60px;
 }
 
 .data-rec-price {
-    font-weight: bold;
+  font-size: 2.8rem !important;
+}
+
+.data-rec-value {
+  font-size: 2.4rem;
+  font-weight: 400;
 }
 
 .last {
- border: 0;
- margin-bottom: 5.3rem ;   
+  border: 0;
+  margin-bottom: 76px;
+  color: rgba(38, 207, 124, 1);
+  font-weight: 600;
 }
 
-.bold {
-    font-weight: bold !important;
-    font-size: 1.3rem !important;
+.payment-order-btn {
+  font-weight: bold !important;
+  font-size: 2.8rem !important;
+  border-radius: 10px !important;
+  padding: 12px 120px !important;
+  background-color: rgba(38, 207, 124, 1) !important;
+  border: 0 !important;
+  margin-bottom: 10px;
 }
 
 .discount {
-    color: gray;
-    font-weight: bold;
+  color: gray;
+}
+
+.cards {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.cards img {
+  width: 45px;
+  height: 20px;
+  /* margin-left: 5px; */
+  object-fit: contain;
+}
+
+
+.btn-cancel-order {
+    color: rgba(38, 207, 124, 1) !important;
+    font-size: 2.4rem !important;
+    font-weight: 400 !important;
+    text-decoration: underline !important;
+}
+
+.address-rec {
+  margin-bottom: 0 !important;
+  font-size: 2.4rem;
+  font-weight: 400;
+  /* padding-bottom: 5px; */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.order-address {
+  width: 100%;
+  padding: 14px 142px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  border: 1px solid rgba(109, 114, 128, 1) !important;
+  /* border-radius: 5px; */
+  outline: 0;
+  margin-bottom: 25px;
 }
