--- a/src/pages/Feedback/feedback.css
+++ b/src/pages/Feedback/feedback.css
@@ -9,13 +9,13 @@
   margin: auto;
 }
 .feedback-title {
-  margin-bottom: 7.5rem !important;
+  margin-bottom: 75px !important;
 }
 
 .pragraph {
   /* text-align: center; */
   margin: 0 auto;
-  margin-bottom: 7.5rem;
+  margin-bottom: 75px;
   width: 50%;
   font-weight: 500;
   font-size: 18px;
@@ -25,7 +25,7 @@
   /* display: block; */
   width: 100%;
   margin-bottom: 30px;
-  border-radius: 2rem;
+  border-radius: 20px;
   padding: 0px 22px;
   font-size: 30px;
 }
