--- a/src/pages/VerficationCode/verify.css
+++ b/src/pages/VerficationCode/verify.css
@@ -1,14 +1,14 @@
-.input-field {
+.input-verify-field {
   border: 1px solid black !important;
   border-radius: 1rem;
   /* padding: 0.5rem 1rem; */
-  padding: 1rem  !important;
+  padding: 10px  !important;
   outline: 0;
   transition: all 0.3s linear;
   letter-spacing: 4px;
 }
 
-.input-field:focus {
+.input-verify-field:focus {
   /* border: 1px solid gray; */
   box-shadow: 0 0 5px 1px rgb(201, 196, 196);
 }
