--- a/src/pages/NewPassword/newPassword.css
+++ b/src/pages/NewPassword/newPassword.css
@@ -1,7 +1,12 @@
 .new-password-form {
-    width: 39%;
+  width: 39%;
 }
 
 .new-password-mb {
-    margin-bottom: 70px;
+  margin-bottom: 70px;
+}
+
+.contain-new-password {
+  background-position-y: 200px, 95% !important;
+  background-position-x: -8%, right !important;
 }
