--- a/src/components/Navbar/NavbarStyle.css
+++ b/src/components/Navbar/NavbarStyle.css
@@ -1,7 +1,7 @@
 .pet-store-navbar {
   padding: 20px 5%;
   background-color: rgba(248, 248, 248, 1);
-  /* box-shadow: -5px 0 2px 2px #2e2d2d !important; */
+  box-shadow: 0px 0 10px 1px #a7a3a3 !important;
   /* box-shadow: 4px 6px 10px 1px rgba(128, 128, 128, 0.2) !important; */
 
 }
