--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,10 +2,10 @@
   background-color: rgba(248, 248, 248, 1) !important;
   display: inline-block;
   /* border: 2px solid #000000; */
-  width: 320px;
+  width: 282px;
   /* width: fit-content; */
   padding: 15px 17px 17px 15px;
-  margin: 0 30px;
+  margin-right: 15px;
   margin-top: 30px;
 }
 img {
